# MovieBrowser

./: .gitignore  README.md  about.py  controller.py  main.py  pyproject.toml  requirements.txt  service.py  test.py
controllers/: details_controller.py  menu_controller.py  tree_controller.py
moviebrowser/: about.py  controller.py  main.py  run.py
services/: imdb_service.py  tree_view_service.py
tests/services/: test_tree_view_service.py
views/: about.py
